welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: illegal start of simple expression
  while(var n:Int=0 <7*5){
        ^SnakeBuggle:6: error: ')' expected but '}' found.
}
^